--- a/styles/pages/_setup-page.scss
+++ b/styles/pages/_setup-page.scss
@@ -1,19 +1,27 @@
 .setup {
   padding:2rem 0;
   
+
+  @include respond(medium2) {
+   
+    padding-bottom:0;
+  }
+
+  @include respond(small2) {
+    padding:0;
+  }
+  
   &-form {
     width: 60%;
     margin: auto;
-
     border: 10px solid $color-white;
     padding: 1rem;
-
     text-align: center;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: rgba($color-black,.5);
+    
 
     @include respond(large) {
       width:70%;
@@ -26,10 +34,21 @@
     @include respond(small) {
       width:90%;
     }
+
+    @include respond(small2) {
+      border:5px solid $color-white;
+      width:100%;
+      padding:1rem 0;
+      height: 82vh;
+    }
   }
 
   &-name {
     width: 75%;
+
+    @include respond(small2) {
+      width:90%;
+    }
   }
 
   &-categories {
@@ -37,6 +56,10 @@
 
     @include respond(small) {
       width:80%;
+    }
+
+    @include respond(small2) {
+      width:90%;
     }
   }
 
@@ -48,9 +71,10 @@
     font-family: $font-secondary;
     letter-spacing: 2px;
     text-align: center;
-
-    padding: .5rem;
+    height:3rem;
+    padding: 0rem 1rem;
     border-radius: 10px;
+    display:block; 
 
     &:focus {
       color: white;
@@ -62,6 +86,10 @@
       font-size:1.2rem;
       letter-spacing: 0;
     }
+
+    @include respond(small2) {
+      font-size:1rem;
+    }
   }
 
   &-button {
@@ -70,5 +98,9 @@
   
   &-label{
     margin: .8rem 0;
+
+    @include respond(small2) {
+      margin: .6rem 0;
+    }
   }
 }
