--- a/styles/style.css
+++ b/styles/style.css
@@ -133,7 +133,9 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   box-sizing: border-box; }
 
 html {
-  font-size: 125%; }
+  font-size: 125%;
+  padding: 0;
+  margin: 0; }
 
 body {
   font-size: 1.5rem;
@@ -141,6 +143,8 @@ body {
   letter-spacing: 5px;
   line-height: 1.6;
   background-image: url("./../images/background.png");
+  padding: 0;
+  margin: 0;
   color: #fff; }
   @media only screen and (max-width: 56.25em) {
     body {
@@ -152,9 +156,6 @@ body {
 .wrapper {
   max-width: 1280px;
   margin: 0 auto; }
-
-.game-area {
-  padding: 1px; }
 
 ul {
   list-style-type: none;
@@ -197,11 +198,20 @@ img {
       box-shadow: none; }
 
 .header-heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   font-size: 4rem;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 20px;
-  margin: 0;
+  margin: 0 auto;
   padding: .5rem 0rem;
   background: -webkit-linear-gradient(330deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
   background: -o-linear-gradient(330deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
@@ -219,9 +229,21 @@ img {
   @media only screen and (max-width: 43.75em) {
     .header-heading {
       font-size: 2rem; } }
+  @media only screen and (max-width: 31.25em) {
+    .header-heading {
+      padding: 1rem 0;
+      line-height: 1.1;
+      font-size: 1.6rem;
+      min-height: 18vh; } }
 
 .setup {
   padding: 2rem 0; }
+  @media only screen and (max-width: 56.25em) {
+    .setup {
+      padding-bottom: 0; } }
+  @media only screen and (max-width: 31.25em) {
+    .setup {
+      padding: 0; } }
   .setup-form {
     width: 60%;
     margin: auto;
@@ -248,20 +270,34 @@ img {
     @media only screen and (max-width: 43.75em) {
       .setup-form {
         width: 90%; } }
+    @media only screen and (max-width: 31.25em) {
+      .setup-form {
+        border: 5px solid #fff;
+        width: 100%;
+        padding: 1rem 0;
+        height: 82vh; } }
   .setup-name {
     width: 75%; }
+    @media only screen and (max-width: 31.25em) {
+      .setup-name {
+        width: 90%; } }
   .setup-categories {
     width: 60%; }
     @media only screen and (max-width: 43.75em) {
       .setup-categories {
         width: 80%; } }
+    @media only screen and (max-width: 31.25em) {
+      .setup-categories {
+        width: 90%; } }
   .setup-number-questions, .setup-difficulty, .setup-categories, .setup-name {
     font-size: 1.4rem;
     font-family: "Open Sans", sans-serif;
     letter-spacing: 2px;
     text-align: center;
-    padding: .5rem;
-    border-radius: 10px; }
+    height: 3rem;
+    padding: 0rem 1rem;
+    border-radius: 10px;
+    display: block; }
     .setup-number-questions:focus, .setup-difficulty:focus, .setup-categories:focus, .setup-name:focus {
       color: white;
       outline: 5px solid #fff;
@@ -270,10 +306,16 @@ img {
       .setup-number-questions, .setup-difficulty, .setup-categories, .setup-name {
         font-size: 1.2rem;
         letter-spacing: 0; } }
+    @media only screen and (max-width: 31.25em) {
+      .setup-number-questions, .setup-difficulty, .setup-categories, .setup-name {
+        font-size: 1rem; } }
   .setup-button {
     margin: 1rem 0; }
   .setup-label {
     margin: .8rem 0; }
+    @media only screen and (max-width: 31.25em) {
+      .setup-label {
+        margin: .6rem 0; } }
 
 .question {
   padding: 2% 0; }
@@ -474,6 +516,10 @@ img {
   @media only screen and (max-width: 80em) {
     .game-over {
       padding: 2rem; } }
+  @media only screen and (max-width: 31.25em) {
+    .game-over {
+      padding: 0rem;
+      height: 82vh; } }
   .game-over-wrapper {
     text-align: center;
     border: 5px solid #fff;
@@ -483,11 +529,18 @@ img {
     display: grid;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
-    justify-content: center; }
+    justify-content: center;
+    height: 100%; }
+    @media only screen and (max-width: 31.25em) {
+      .game-over-wrapper {
+        padding: 2rem 1rem; } }
   .game-over-heading {
     margin: 0; }
   .game-over-img-box {
     width: 40%;
     margin: 0 auto; }
+    @media only screen and (max-width: 31.25em) {
+      .game-over-img-box {
+        width: 60%; } }
   .game-over-stats {
     margin: 1rem 0; }
