--- a/styles/base/_mixins.scss
+++ b/styles/base/_mixins.scss
@@ -22,8 +22,11 @@
   
   @if $breakpoint==small2 {
 		@media only screen and (max-width:31.25em){@content}; // 500px/16px = 31.25em
+  }
+  
+  @if $breakpoint==small3 {
+		@media only screen and (max-width:25em){@content}; // 400px/16px = 25em
 	}
-
 }
 
 // Responsive Mixin Referenced from https://www.udemy.com/advanced-css-and-sass/
