--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -1,39 +1,48 @@
 .header{ 
  
-  &-heading {  
-    display:flex;
-    align-items: center;
-    justify-content: center;
+  &-heading {    
     font-size: 4rem;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 20px;
+
     margin:0 auto;
     padding: .5rem 0rem;
+
     background: linear-gradient(120deg, rgba($color-black,.8) 50%, rgba($color-primary,.8));
-    
+
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
     @include respond(large) {
       font-size:3.5rem;
     }
 
     @include respond(medium) {
-      font-size:3rem;
-      padding: 0;
+      font-size: 3rem;
+      padding: 1rem 0;
     }
 
     @include respond(medium2) {
-      font-size:2.5rem;
+      font-size: 2.5rem;
     }
 
     @include respond(small) {
-      font-size:2rem;
+      font-size: 2rem;
     }
 
     @include respond(small2) {
       padding: 1rem 0;
-      line-height:1.1;
-      font-size:1.6rem;
+      font-size: 1.6rem;
+      line-height: 1.1;  
       min-height: 18vh;
+    }
+
+    @include respond(small3) {
+      font-size:1.3rem;
+      min-height:13vh;
+      padding:.5rem;
     }
   }
 }
