--- a/styles/style.css
+++ b/styles/style.css
@@ -123,7 +123,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   visibility: hidden;
   display: block;
   font-size: 0;
-  content: '';
+  content: "";
   clear: both;
   height: 0; }
 
@@ -152,6 +152,9 @@ body {
   @media only screen and (max-width: 43.75em) {
     body {
       font-size: 1.2rem; } }
+  @media only screen and (max-width: 25em) {
+    body {
+      font-size: 1rem; } }
 
 .wrapper {
   max-width: 1280px;
@@ -178,7 +181,8 @@ img {
   color: currentColor;
   -webkit-transition: .3s all;
   -o-transition: .3s all;
-  transition: .3s all; }
+  transition: .3s all;
+  letter-spacing: 3px; }
   .btn:hover, .btn:focus {
     -webkit-transform: translateY(-2px);
     -ms-transform: translateY(-2px);
@@ -198,15 +202,6 @@ img {
       box-shadow: none; }
 
 .header-heading {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
   font-size: 4rem;
   text-align: center;
   text-transform: uppercase;
@@ -215,14 +210,23 @@ img {
   padding: .5rem 0rem;
   background: -webkit-linear-gradient(330deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
   background: -o-linear-gradient(330deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
-  background: linear-gradient(120deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8)); }
+  background: linear-gradient(120deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
   @media only screen and (max-width: 80em) {
     .header-heading {
       font-size: 3.5rem; } }
   @media only screen and (max-width: 65.625em) {
     .header-heading {
       font-size: 3rem;
-      padding: 0; } }
+      padding: 1rem 0; } }
   @media only screen and (max-width: 56.25em) {
     .header-heading {
       font-size: 2.5rem; } }
@@ -232,9 +236,14 @@ img {
   @media only screen and (max-width: 31.25em) {
     .header-heading {
       padding: 1rem 0;
-      line-height: 1.1;
       font-size: 1.6rem;
+      line-height: 1.1;
       min-height: 18vh; } }
+  @media only screen and (max-width: 25em) {
+    .header-heading {
+      font-size: 1.3rem;
+      min-height: 13vh;
+      padding: .5rem; } }
 
 .setup {
   padding: 2rem 0; }
@@ -276,6 +285,10 @@ img {
         width: 100%;
         padding: 1rem 0;
         height: 82vh; } }
+    @media only screen and (max-width: 25em) {
+      .setup-form {
+        height: 87vh;
+        padding: .5rem; } }
   .setup-name {
     width: 75%; }
     @media only screen and (max-width: 31.25em) {
@@ -339,12 +352,15 @@ img {
     background-color: rgba(0, 0, 0, 0.5); }
     @media only screen and (max-width: 56.25em) {
       .question-content {
+        width: 100%;
         height: 100%;
-        padding: 2rem;
-        width: 100%; } }
+        padding: 2rem; } }
     @media only screen and (max-width: 43.75em) {
       .question-content {
         padding: 1rem; } }
+    @media only screen and (max-width: 25em) {
+      .question-content {
+        padding: .5rem; } }
   .question-header {
     display: -ms-grid;
     display: grid;
@@ -367,6 +383,9 @@ img {
       .question-header {
         -ms-grid-columns: 1fr;
         grid-template-columns: 1fr; } }
+    @media only screen and (max-width: 25em) {
+      .question-header {
+        margin-top: .5rem; } }
   .question-heading {
     text-decoration: underline;
     margin: 0;
@@ -384,11 +403,18 @@ img {
     @media only screen and (max-width: 31.25em) {
       .question-heading {
         font-size: 1.1rem; } }
+    @media only screen and (max-width: 25em) {
+      .question-heading {
+        font-size: 1rem; } }
   .question-mobile-heading {
     margin: 0; }
     @media only screen and (max-width: 31.25em) {
       .question-mobile-heading {
         font-size: 1.4rem; } }
+    @media only screen and (max-width: 25em) {
+      .question-mobile-heading {
+        font-size: 1.3rem;
+        display: none; } }
   @media only screen and (max-width: 65.625em) {
     .question-count {
       -ms-grid-column-align: start;
@@ -444,6 +470,9 @@ img {
     @media only screen and (max-width: 31.25em) {
       .question-question {
         font-size: .9rem; } }
+    @media only screen and (max-width: 25em) {
+      .question-question {
+        margin: 2% 0; } }
   .question-answers {
     display: -ms-grid;
     display: grid;
@@ -493,6 +522,9 @@ img {
       .question-answer-btn {
         font-size: .9rem;
         border: 3px solid #fff; } }
+    @media only screen and (max-width: 25em) {
+      .question-answer-btn {
+        padding: .4rem 1rem; } }
   .question-num {
     margin-right: .5rem; }
   .question-answer {
@@ -520,6 +552,9 @@ img {
     .game-over {
       padding: 0rem;
       height: 82vh; } }
+  @media only screen and (max-width: 25em) {
+    .game-over {
+      height: 87vh; } }
   .game-over-wrapper {
     text-align: center;
     border: 5px solid #fff;
@@ -534,6 +569,9 @@ img {
     @media only screen and (max-width: 31.25em) {
       .game-over-wrapper {
         padding: 2rem 1rem; } }
+    @media only screen and (max-width: 25em) {
+      .game-over-wrapper {
+        padding: .5rem; } }
   .game-over-heading {
     margin: 0; }
   .game-over-img-box {
@@ -544,3 +582,6 @@ img {
         width: 60%; } }
   .game-over-stats {
     margin: 1rem 0; }
+    @media only screen and (max-width: 25em) {
+      .game-over-stats {
+        margin: .5rem 0; } }
