--- a/styles/style.css
+++ b/styles/style.css
@@ -235,15 +235,15 @@ img {
       font-size: 2rem; } }
   @media only screen and (max-width: 31.25em) {
     .header-heading {
-      padding: 1rem 0;
       font-size: 1.6rem;
       line-height: 1.1;
+      padding: 1rem 0;
       min-height: 18vh; } }
   @media only screen and (max-width: 25em) {
     .header-heading {
       font-size: 1.3rem;
-      min-height: 13vh;
-      padding: .5rem; } }
+      padding: .5rem;
+      min-height: 13vh; } }
 
 .setup {
   padding: 2rem 0; }
@@ -255,10 +255,10 @@ img {
       padding: 0; } }
   .setup-form {
     width: 60%;
-    margin: auto;
-    border: 10px solid #fff;
-    padding: 1rem;
     text-align: center;
+    margin: auto;
+    padding: 1rem;
+    border: 10px solid #fff;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -281,10 +281,10 @@ img {
         width: 90%; } }
     @media only screen and (max-width: 31.25em) {
       .setup-form {
-        border: 5px solid #fff;
         width: 100%;
+        height: 82vh;
         padding: 1rem 0;
-        height: 82vh; } }
+        border: 5px solid #fff; } }
     @media only screen and (max-width: 25em) {
       .setup-form {
         height: 87vh;
@@ -303,11 +303,11 @@ img {
       .setup-categories {
         width: 90%; } }
   .setup-number-questions, .setup-difficulty, .setup-categories, .setup-name {
+    height: 3rem;
     font-size: 1.4rem;
     font-family: "Open Sans", sans-serif;
     letter-spacing: 2px;
     text-align: center;
-    height: 3rem;
     padding: 0rem 1rem;
     border-radius: 10px;
     display: block; }
@@ -331,7 +331,7 @@ img {
         margin: .6rem 0; } }
 
 .question {
-  padding: 2% 0; }
+  padding: 2rem 0; }
   @media only screen and (max-width: 80em) {
     .question {
       padding: 2rem; } }
@@ -432,6 +432,7 @@ img {
       -ms-grid-column-align: center;
       justify-self: center; } }
   .question-box {
+    margin-top: 1.5%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -441,8 +442,7 @@ img {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-    flex-direction: column;
-    margin-top: 1.5%; }
+    flex-direction: column; }
   .question-player-name {
     grid-column: 1/-1;
     margin: 1rem 0 0 0; }
@@ -459,14 +459,13 @@ img {
         font-size: 1.6rem; } }
     @media only screen and (max-width: 56.25em) {
       .question-question {
-        margin: .5rem 0;
         font-size: 1.3rem;
         margin-top: 5%;
         margin-bottom: 5%; } }
     @media only screen and (max-width: 43.75em) {
       .question-question {
-        margin: 6% 0 3% 0;
-        font-size: 1.2rem; } }
+        font-size: 1.2rem;
+        margin: 6% 0 3% 0; } }
     @media only screen and (max-width: 31.25em) {
       .question-question {
         font-size: .9rem; } }
@@ -497,17 +496,17 @@ img {
         margin: 0; } }
   .question-answer-btn {
     width: 100%;
-    text-align: left;
     height: 100%;
-    line-height: 1.2;
     font-size: 1.3rem;
+    text-align: left;
+    line-height: 1.2;
+    letter-spacing: 2px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center;
-    letter-spacing: 2px; }
+    align-items: center; }
     @media only screen and (max-width: 65.625em) {
       .question-answer-btn {
         font-size: 1.1rem;
