--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -59,6 +59,9 @@ img {
 
   letter-spacing:3px;
   
+  @include respond(small2) {
+    border:3px solid $color-white;
+  }
     &:hover, &:focus {
       transform: translateY(-2px);
       box-shadow: inset -1px -2px 2px 70px $color-primary-light;
