--- a/styles/pages/_game-over.scss
+++ b/styles/pages/_game-over.scss
@@ -1,17 +1,17 @@
 .game-over {
   padding: 2rem 0;
-
+  
   @include respond(large){
     padding: 2rem;
   }
 
   @include respond(small2) {
-    padding:0rem;
-    height:82vh;
+    padding: 0rem;
+    height: 82vh;
   }
 
   @include respond(small3) {
-    height:87vh;
+    height: 87vh;
   }
 
   &-wrapper {
@@ -19,30 +19,25 @@
     border: 5px solid #fff;
     padding: 2rem;
     background: rgba(0,0,0,.5);
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    height:100%;
+    
+    height: 100%;
 
     @include respond(small2) {
-      padding:2rem 1rem;
+      padding: 2rem 1rem;
+      border:none;
     }
 
     @include respond(small3) {
-      padding:.5rem;
+      padding: .5rem;
     }
   }
 
   &-heading{
     margin: 0;
-  }
-
-  &-img-box{
-    width: 40%;
-    margin: 0 auto;
-
-    @include respond(small2) {
-      width:60%;
-    }
   }
 
   &-stats {
@@ -52,4 +47,26 @@
       margin: .5rem 0;
     }
   }
+
+  &-img-box{
+    width: 20%;
+    margin: 0 auto;
+    
+    @include respond(medium2) {
+      width: 30%;
+    }
+
+    @include respond(small2) {
+      width: 40%; 
+    }
+  }
+
+  &-message {
+
+    @include respond(small3) {
+      margin:.5rem;
+    }
+  }
+
+ 
 }
