--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -62,12 +62,13 @@ img {
   @include respond(small2) {
     border:3px solid $color-white;
   }
-    &:hover, &:focus {
-      transform: translateY(-2px);
-      box-shadow: inset -1px -2px 2px 70px $color-primary-light;
-      color: $color-white;
-    }
-    
+
+  &:hover, &:focus, &:active {
+    transform: translateY(-2px);
+    box-shadow: inset -1px -2px 2px 70px $color-primary-light;
+    color: $color-white;
+  }
+      
   &:disabled {
     background: $color-primary;
     color: darken($color-white,20);
