--- a/styles/style.css
+++ b/styles/style.css
@@ -186,7 +186,7 @@ img {
   @media only screen and (max-width: 31.25em) {
     .btn {
       border: 3px solid #fff; } }
-  .btn:hover, .btn:focus {
+  .btn:hover, .btn:focus, .btn:active {
     -webkit-transform: translateY(-2px);
     -ms-transform: translateY(-2px);
     transform: translateY(-2px);
