--- a/styles/style.css
+++ b/styles/style.css
@@ -257,7 +257,7 @@ img {
   .setup-form {
     width: 60%;
     text-align: center;
-    margin: auto;
+    margin: 0 auto;
     padding: 1rem;
     border: 10px solid #fff;
     display: -webkit-box;
@@ -304,7 +304,7 @@ img {
       .setup-categories {
         width: 90%; } }
   .setup-number-questions, .setup-difficulty, .setup-categories, .setup-name {
-    height: 3rem;
+    height: 2.8rem;
     font-size: 1.4rem;
     font-family: "Open Sans", sans-serif;
     letter-spacing: 2px;
@@ -326,10 +326,7 @@ img {
   .setup-button {
     margin: 1rem 0; }
   .setup-label {
-    margin: .8rem 0; }
-    @media only screen and (max-width: 31.25em) {
-      .setup-label {
-        margin: .6rem 0; } }
+    margin: .6rem 0; }
 
 .question {
   padding: 2rem 0; }
