--- a/styles/style.css
+++ b/styles/style.css
@@ -133,9 +133,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   box-sizing: border-box; }
 
 html {
-  font-size: 125%;
-  padding: 0;
-  margin: 0; }
+  font-size: 125%; }
 
 body {
   font-size: 1.5rem;
@@ -143,8 +141,6 @@ body {
   letter-spacing: 5px;
   line-height: 1.6;
   background-image: url("./../images/background.png");
-  padding: 0;
-  margin: 0;
   color: #fff; }
   @media only screen and (max-width: 56.25em) {
     body {
