--- a/styles/style.css
+++ b/styles/style.css
@@ -348,13 +348,11 @@ img {
       .question-content {
         width: 100%;
         height: 100%;
-        padding: 2rem; } }
+        padding: 2rem;
+        border: none; } }
     @media only screen and (max-width: 43.75em) {
       .question-content {
         padding: 1rem; } }
-    @media only screen and (max-width: 31.25em) {
-      .question-content {
-        border: none; } }
     @media only screen and (max-width: 25em) {
       .question-content {
         padding: .5rem; } }
@@ -366,10 +364,6 @@ img {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center; }
-    @media only screen and (max-width: 65.625em) {
-      .question-header {
-        -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr; } }
     @media only screen and (max-width: 56.25em) {
       .question-header {
         -ms-flex-item-align: start;
@@ -457,8 +451,7 @@ img {
     @media only screen and (max-width: 56.25em) {
       .question-question {
         font-size: 1.3rem;
-        margin-top: 5%;
-        margin-bottom: 5%; } }
+        margin: 5% 0; } }
     @media only screen and (max-width: 43.75em) {
       .question-question {
         font-size: 1.2rem;
