--- a/styles/pages/_setup-page.scss
+++ b/styles/pages/_setup-page.scss
@@ -1,6 +1,6 @@
 .setup {
   padding: 1.8rem 0;
-  
+
   @include respond(medium2) {
     padding-bottom: 0;
   }
@@ -38,13 +38,13 @@
 
     @include respond(small2) { 
       width: 100%;
-      height: 82vh;
+      // height: 82vh;
       padding: 1rem 0;
       border: none;
     }
 
     @include respond(small3) {
-      height: 87vh;
+      // height: 87vh;
       padding: .5rem;
     }
   }
