--- a/styles/pages/_question.scss
+++ b/styles/pages/_question.scss
@@ -22,7 +22,8 @@
     border: 5px solid $color-white;
     padding: 1.5rem;
     background-color: rgba($color-black,.5);
-
+    margin: auto;
+    
     @include respond(medium2) {    
       width: 100%;
       height: 100%;
@@ -40,40 +41,21 @@
   } 
 
   &-header { 
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
+    display:flex;
+    justify-content: space-around;
 
-    @include respond(medium2) {
-      align-self: start;
-      margin-top: 1rem;
-    }
-
-    @include respond(small) {
-      grid-template-columns: 1fr;
-    }
-
-    @include respond (small3) {
-      margin-top: .5rem;
+    @include respond(medium3) {
+      flex-direction: column;
     }
   }
 
   &-heading {
     text-decoration: underline;
     margin: 0;
-    font-size: 2.25rem;
+    font-size: 1.5rem;
 
-    @include respond(medium) {
-      font-size: 2rem;
-      text-decoration: none;
-    }
-
-    @include respond(medium2) {
-      font-size: 1.8rem;
-    }
-
-    @include respond(medium3) {
-      font-size: 1.5rem;
+    @include respond(large) {
+      font-size: 1.3rem;
     }
 
     @include respond(small2) {
@@ -93,8 +75,8 @@
     }
 
     @include respond(small3) {
-      font-size: 1.3rem;
-      display: none;
+      font-size: 1.1rem;
+      // display: none;
     }
   }
 
@@ -126,12 +108,7 @@
   }
 
   &-player-name {
-    grid-column: 1/-1;
-    margin: 1rem 0 0 0;
 
-    @include respond(small) {
-      margin: 0;
-    }
   }
 
   &-question {
