--- a/styles/style.css
+++ b/styles/style.css
@@ -217,6 +217,10 @@ img {
   visibility: hidden;
 }
 
+.hidden-header {
+  display: none;
+}
+
 .btn {
   padding: .5rem 1rem;
   border: 5px solid #fff;
@@ -370,6 +374,7 @@ img {
 @media only screen and (max-width: 31.25em) {
   .setup-form {
     width: 100%;
+    height: 82vh;
     padding: 1rem 0;
     border: none;
   }
@@ -377,6 +382,7 @@ img {
 
 @media only screen and (max-width: 25em) {
   .setup-form {
+    height: 87vh;
     padding: .5rem;
   }
 }
@@ -476,6 +482,7 @@ img {
   border: 5px solid #fff;
   padding: 1.5rem;
   background-color: rgba(0, 0, 0, 0.5);
+  margin: auto;
 }
 
 @media only screen and (max-width: 56.25em) {
@@ -500,59 +507,31 @@ img {
 }
 
 .question-header {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media only screen and (max-width: 50em) {
   .question-header {
-    -ms-flex-item-align: start;
-        -ms-grid-row-align: start;
-        align-self: start;
-    margin-top: 1rem;
-  }
-}
-
-@media only screen and (max-width: 43.75em) {
-  .question-header {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-  }
-}
-
-@media only screen and (max-width: 25em) {
-  .question-header {
-    margin-top: .5rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
 .question-heading {
   text-decoration: underline;
   margin: 0;
-  font-size: 2.25rem;
+  font-size: 1.5rem;
 }
 
-@media only screen and (max-width: 65.625em) {
+@media only screen and (max-width: 80em) {
   .question-heading {
-    font-size: 2rem;
-    text-decoration: none;
-  }
-}
-
-@media only screen and (max-width: 56.25em) {
-  .question-heading {
-    font-size: 1.8rem;
-  }
-}
-
-@media only screen and (max-width: 50em) {
-  .question-heading {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
 }
 
@@ -580,8 +559,7 @@ img {
 
 @media only screen and (max-width: 25em) {
   .question-mobile-heading {
-    font-size: 1.3rem;
-    display: none;
+    font-size: 1.1rem;
   }
 }
 
@@ -625,17 +603,6 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-
-.question-player-name {
-  grid-column: 1/-1;
-  margin: 1rem 0 0 0;
-}
-
-@media only screen and (max-width: 43.75em) {
-  .question-player-name {
-    margin: 0;
-  }
 }
 
 .question-question {
