--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -5,7 +5,7 @@
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 20px;
-
+    height:15vh;
     margin: 0 auto;
     background: linear-gradient(120deg, rgba($color-black,.8) 50%, rgba($color-primary,.8));
 
@@ -34,12 +34,16 @@
       line-height: 1.1; 
       letter-spacing: 10px;
       padding: 1rem 0;
-      min-height: 18vh;
+      
     }
 
     @include respond(small3) {
       font-size: 1.4rem;
-      min-height: 13vh;
+    }
+
+    @media (max-height:800px) and (min-width:900px) {
+      font-size: 3rem;
+      height:12vh;
     }
   }
 }
