--- a/styles/pages/_question.scss
+++ b/styles/pages/_question.scss
@@ -10,6 +10,10 @@
     height: 100vh;
   }
 
+  @media (max-height:800px) and (min-width:900px) {
+    padding:1rem 0;
+  }
+
   &-wrapper {
     @include respond(medium2) {
       height: 100%;
@@ -23,7 +27,7 @@
     padding: 1.5rem;
     background-color: rgba($color-black,.5);
     margin: auto;
-    
+
     @include respond(medium2) {    
       width: 100%;
       height: 100%;
@@ -37,6 +41,10 @@
 
     @include respond(small3) {
       padding: .5rem;
+    }
+
+    @media (max-height:800px) and (min-width:900px) {
+      padding:1rem;
     }
   } 
 
@@ -63,7 +71,7 @@
     }
 
     @include respond(small3) {
-      font-size: 1rem;
+      font-size: .9rem;
     }
   }
 
@@ -71,12 +79,13 @@
     margin: 0;
 
     @include respond(small2) {
-      font-size: 1.4rem;
+      font-size: 1.6rem;
+      margin:1rem;
     }
 
     @include respond(small3) {
       font-size: 1.1rem;
-      // display: none;
+      margin:.4rem;
     }
   }
 
@@ -107,10 +116,6 @@
     flex-direction: column; 
   }
 
-  &-player-name {
-
-  }
-
   &-question {
     font-size: 1.8rem;
     font-family: "Open Sans", sans-serif;
@@ -138,6 +143,12 @@
     @include respond(small3) {
       margin: 2% 0;
     }
+
+    @media (max-height:800px) and (min-width:900px) {
+      font-size:1.5rem;
+      margin:0;
+      margin-bottom:.5rem;
+    }
   }
 
   &-answers {
@@ -154,6 +165,8 @@
     @include respond(small2) {
       grid-row-gap: .5rem;
     }
+
+   
   }
 
   &-list-item {
@@ -167,7 +180,6 @@
   &-list-item {
     &:not(:last-child){
       margin-bottom: .5rem;
-
       @include respond(medium2) {
         margin: 0;
       }
@@ -203,7 +215,12 @@
     }
 
     @include respond(small3) {
-     padding: .4rem 1rem; 
+     padding: .2rem 1rem; 
+     font-size:.85rem;
+    }
+
+    @media (max-height:800px) and (min-width:900px) {
+      line-height:1;
     }
   }
 
@@ -221,6 +238,10 @@
     @include respond(medium2) {
       margin-top: 1rem;
       font-size: 1.1rem;
+    }
+
+    @include respond(small2) {
+      font-size:1rem;
     }
   }
 }
