--- a/styles/pages/_setup-page.scss
+++ b/styles/pages/_setup-page.scss
@@ -1,5 +1,7 @@
 .setup {
-  padding: 1.8rem 0;
+ 
+  height:100%;
+
 
   @include respond(medium2) {
     padding-bottom: 0;
@@ -9,12 +11,17 @@
     padding: 0;
   }
 
+  &__wrapper {
+    display:flex;
+    height:100%;
+  }
+
   &-form {
     width: 60%;
 
     text-align: center;
 
-    margin: 0 auto;
+    margin: auto;
     padding: 1rem;
     border: 10px solid $color-white;
     
@@ -33,24 +40,30 @@
     }
 
     @include respond(small) {
-      width: 90%;
+      width: 100%;
+      height: 85vh;
+      border:none;
     }
 
     @include respond(small2) { 
-      width: 100%;
-      height: 82vh;
+      
       padding: 1rem 0;
       border: none;
     }
 
     @include respond(small3) {
-      height: 87vh;
       padding: .5rem;
+    }
+
+    @media (max-height:800px) and (min-width:900px) {
+      padding:.5rem;
+      border:5px solid $color-white;
+      font-size:1.2rem;
     }
   }
 
   &-name {
-    width: 75%;
+    width: 60%;
 
     @include respond(small2) {
       width: 90%;
@@ -95,6 +108,11 @@
 
     @include respond(small2) {
       font-size: 1rem;
+    }
+
+    @media (max-height:800px) and (min-width:900px) {
+      height:2.4rem;
+      font-size:1.3rem;
     }
   }
 
