--- a/styles/style.css
+++ b/styles/style.css
@@ -259,11 +259,22 @@ img {
           box-shadow: none;
 }
 
+.game-area {
+  height: 85vh;
+}
+
+@media (max-height: 800px) and (min-width: 900px) {
+  .game-area {
+    height: 88vh;
+  }
+}
+
 .header-heading {
   font-size: 3.8rem;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 20px;
+  height: 15vh;
   margin: 0 auto;
   background: linear-gradient(120deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
   display: -webkit-box;
@@ -307,19 +318,24 @@ img {
     line-height: 1.1;
     letter-spacing: 10px;
     padding: 1rem 0;
-    min-height: 18vh;
   }
 }
 
 @media only screen and (max-width: 25em) {
   .header-heading {
     font-size: 1.4rem;
-    min-height: 13vh;
+  }
+}
+
+@media (max-height: 800px) and (min-width: 900px) {
+  .header-heading {
+    font-size: 3rem;
+    height: 12vh;
   }
 }
 
 .setup {
-  padding: 1.8rem 0;
+  height: 100%;
 }
 
 @media only screen and (max-width: 56.25em) {
@@ -334,10 +350,17 @@ img {
   }
 }
 
+.setup__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+}
+
 .setup-form {
   width: 60%;
   text-align: center;
-  margin: 0 auto;
+  margin: auto;
   padding: 1rem;
   border: 10px solid #fff;
   display: -webkit-box;
@@ -367,14 +390,14 @@ img {
 
 @media only screen and (max-width: 43.75em) {
   .setup-form {
-    width: 90%;
+    width: 100%;
+    height: 85vh;
+    border: none;
   }
 }
 
 @media only screen and (max-width: 31.25em) {
   .setup-form {
-    width: 100%;
-    height: 82vh;
     padding: 1rem 0;
     border: none;
   }
@@ -382,13 +405,20 @@ img {
 
 @media only screen and (max-width: 25em) {
   .setup-form {
-    height: 87vh;
     padding: .5rem;
   }
 }
 
+@media (max-height: 800px) and (min-width: 900px) {
+  .setup-form {
+    padding: .5rem;
+    border: 5px solid #fff;
+    font-size: 1.2rem;
+  }
+}
+
 .setup-name {
-  width: 75%;
+  width: 60%;
 }
 
 @media only screen and (max-width: 31.25em) {
@@ -443,6 +473,13 @@ img {
   }
 }
 
+@media (max-height: 800px) and (min-width: 900px) {
+  .setup-number-questions, .setup-difficulty, .setup-categories, .setup-name {
+    height: 2.4rem;
+    font-size: 1.3rem;
+  }
+}
+
 .setup-button {
   margin: 1rem 0;
 }
@@ -465,6 +502,12 @@ img {
   .question {
     padding: 0;
     height: 100vh;
+  }
+}
+
+@media (max-height: 800px) and (min-width: 900px) {
+  .question {
+    padding: 1rem 0;
   }
 }
 
@@ -506,6 +549,12 @@ img {
   }
 }
 
+@media (max-height: 800px) and (min-width: 900px) {
+  .question-content {
+    padding: 1rem;
+  }
+}
+
 .question-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -543,7 +592,7 @@ img {
 
 @media only screen and (max-width: 25em) {
   .question-heading {
-    font-size: 1rem;
+    font-size: .9rem;
   }
 }
 
@@ -553,13 +602,15 @@ img {
 
 @media only screen and (max-width: 31.25em) {
   .question-mobile-heading {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
+    margin: 1rem;
   }
 }
 
 @media only screen and (max-width: 25em) {
   .question-mobile-heading {
     font-size: 1.1rem;
+    margin: .4rem;
   }
 }
 
@@ -641,6 +692,14 @@ img {
 @media only screen and (max-width: 25em) {
   .question-question {
     margin: 2% 0;
+  }
+}
+
+@media (max-height: 800px) and (min-width: 900px) {
+  .question-question {
+    font-size: 1.5rem;
+    margin: 0;
+    margin-bottom: .5rem;
   }
 }
 
@@ -729,7 +788,14 @@ img {
 
 @media only screen and (max-width: 25em) {
   .question-answer-btn {
-    padding: .4rem 1rem;
+    padding: .2rem 1rem;
+    font-size: .85rem;
+  }
+}
+
+@media (max-height: 800px) and (min-width: 900px) {
+  .question-answer-btn {
+    line-height: 1;
   }
 }
 
@@ -752,33 +818,25 @@ img {
   }
 }
 
-.game-over {
-  padding: 2rem 0;
-}
-
-@media only screen and (max-width: 80em) {
-  .game-over {
-    padding: 2rem;
-  }
-}
-
 @media only screen and (max-width: 31.25em) {
-  .game-over {
-    padding: 0rem;
-    height: 82vh;
+  .question-next {
+    font-size: 1rem;
   }
 }
 
-@media only screen and (max-width: 25em) {
-  .game-over {
-    height: 87vh;
-  }
+.game-over {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
 }
 
 .game-over-wrapper {
   text-align: center;
   border: 5px solid #fff;
   padding: 2rem;
+  margin: auto;
+  width: 50%;
   background: rgba(0, 0, 0, 0.5);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -793,11 +851,18 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 100%;
 }
 
-@media only screen and (max-width: 31.25em) {
+@media only screen and (max-width: 56.25em) {
   .game-over-wrapper {
+    width: 75%;
+  }
+}
+
+@media only screen and (max-width: 43.75em) {
+  .game-over-wrapper {
+    width: 100vw;
+    height: 85vh;
     padding: 2rem 1rem;
     border: none;
   }
