--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,6 +2,7 @@
 @import "base/variables";
 @import "base/mixins";
 @import "base/base";
+@import "layout/game-area";
 @import "layout/header";
 @import "pages/setup-page";
 @import "pages/question";
