--- a/styles/pages/_setup-page.scss
+++ b/styles/pages/_setup-page.scss
@@ -1,7 +1,7 @@
 .setup {
  
   height:100%;
-
+  
 
   @include respond(medium2) {
     padding-bottom: 0;
@@ -14,6 +14,7 @@
   &__wrapper {
     display:flex;
     height:100%;
+    
   }
 
   &-form {
@@ -53,6 +54,7 @@
 
     @include respond(small3) {
       padding: .5rem;
+      height:90vh;
     }
 
     @media (max-height:800px) and (min-width:900px) {
